--- a/trunk/bochs/CHANGES
+++ b/trunk/bochs/CHANGES
@@ -11,13 +11,17 @@ Changes after 2.6.11:
   - Add more symbol lookups to disasm methods
 
 - I/O Devices
-  - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
-    per model are supported. Use the zero-based "card" parameter to specify device.
-  - Added log file support to 'bxhub' utility (networking module 'socket').
-  - VGA: Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
-    to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
-  - VGA DDC: Added "ddc" parameter to the "vga" option to make it possible
-    either to disable the DDC feature or to read the monitor EDID from file.
+  - Networking
+    - Added "multiple NICs" support to the NE2000 and E1000 devices. Up to 4 devices
+      per model are supported. Use the zero-based "card" parameter to specify device.
+    - Added log file support to 'bxhub' utility (networking module 'socket').
+    - Enable 'vnet' packet logging in text format if file name is specified with the
+      "script" parameter.
+  - VGA
+    - Removed lfb_enabled switch from Bochs VBE code. Now banked and LFB writes
+      to VRAM are always valid. Fixes GRUB bootloader menu when using Bochs VBE.
+    - DDC: Added "ddc" parameter to the "vga" option to make it possible
+      either to disable the DDC feature or to read the monitor EDID from file.
 
 -------------------------------------------------------------------------
 Changes in 2.6.11 (January 5, 2020):
