--- a/trunk/bochs/doc/docbook/user/user.dbk
+++ b/trunk/bochs/doc/docbook/user/user.dbk
@@ -4736,7 +4736,10 @@ is executed after bochs initialize the network interface. You can use
 this script to configure this network interface, or enable masquerading.
 This is mainly useful for the tun/tap devices that only exist during
 Bochs execution. The network interface name is supplied to the script
-as first parameter.
+as first parameter. The 'slirp' module uses this parameter to specify a config
+file for setting up an alternative IP configuration or additional features.
+The 'vnet' module uses this parameter to specify a file name for logging
+packets in text format.
 
 BOOTROM: The bootrom value is optional, and is the name of the ROM image
 to load. Note that this feature is only implemented for the PCI version of
