--- a/trunk/bochs/doc/man/bochsrc.5
+++ b/trunk/bochs/doc/man/bochsrc.5
@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "22 Mar 2020" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "2 May 2020" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -1175,8 +1175,8 @@ This is mainly useful for the tun/tap devices that only exist during
 Bochs execution. The network interface name is supplied to the script
 as first parameter. The 'slirp' module uses this parameter to specify
 a config file for setting up an alternative IP configuration or additional
-features. The 'vnet' module uses this parameter to specify an alternative
-log file name.
+features. The 'vnet' module uses this parameter to specify a file name for
+logging packets in text format.
 
 BOOTROM:
 The bootrom value is optional, and is the name of the ROM image
