--- a/trunk/bochs/CHANGES
+++ b/trunk/bochs/CHANGES
@@ -23,6 +23,9 @@ Changes after 2.6.11:
     - DDC: Added "ddc" parameter to the "vga" option to make it possible
       either to disable the DDC feature or to read the monitor EDID from file.
 
+- GUI and display libraries
+    - Added Swiss-German keymap for X11.
+
 -------------------------------------------------------------------------
 Changes in 2.6.11 (January 5, 2020):
 
