Removed legacy "load32bitOShack" feature. In the early days of Bochs some hacks were required to load a 32 bit OS. In the meantime Bochs has been made capable of loading 32 and 64 bit OS's without hacking.

--- a/bochs/CHANGES
+++ b/bochs/CHANGES
@@ -3,6 +3,7 @@ Changes after 2.6.11:
 
 - General
   - Save/Restore bugfixes
+  - Removed legacy "load32bitOShack" feature.
 
 - CPU/CPUDB
   - Bugfixes for CPU emulation correctness (CPUID/VMX initialization fixes to support Windows Hyper-V as guest in Bochs)
