Added "command mode" support to the legacy SDL gui, including fullscreen toggle support. Updated related documentation sections.

--- a/bochs/doc/docbook/user/user.dbk
+++ b/bochs/doc/docbook/user/user.dbk
@@ -3364,12 +3364,19 @@ Examples:
 Some display libraries now support specific options to control their
 behaviour. These options are supported by more than one display library:
 <screen>
-  "cmdmode"     - call a headerbar button handler after pressing F7 (x, sdl2)
+  "cmdmode"     - call a headerbar button handler after pressing F7 (x, sdl, sdl2)
   "fullscreen"  - startup in fullscreen mode (sdl, sdl2)
   "gui_debug"   - use GTK debugger gui (sdl, x) / Win32 debugger gui (sdl, sdl2, win32)
   "hideIPS"     - disable IPS output in status bar (rfb, sdl, sdl2, vncsrv, win32, wx, x)
   "nokeyrepeat" - turn off host keyboard repeat (sdl, sdl2, win32, x)
   "timeout"     - time (in seconds) to wait for client (rfb, vncsrv)
+</screen>
+See the examples below for other currently supported options.
+<screen>
+  # "traphotkeys" - system hotkeys not handled by host OS, but sent to guest
+  #                 (win32 in mouse capture and fullscreen mode: alt-tab, win,
+  #                 alt-space, alt-esc, ctrl-esc)
+  display_library: win32, options="traphotkeys"
 </screen>
 </para>
 
@@ -5628,9 +5635,9 @@ Some of these features may not be implemented or work different on your host pla
 
 <section id="command-mode"><title>Command mode</title>
 <para>
-When using 'x' or 'sdl2' as the <command>display_library</command>, the option
-'cmdmode' enables the "command mode" support. If enabled, pressing the F7 key
-will enter 'command mode' (shown in the info item of the statusbar);
+When using 'x', 'sdl' or 'sdl2' as the <command>display_library</command>, the 
+option 'cmdmode' enables the "command mode" support. If enabled, pressing the F7
+key will enter 'command mode' (shown in the info item of the statusbar);
 the next key that is pressed will exit command-mode. When in command-mode,
 if the pressed key is in the list below, the corresponding action will be
 performed. With the exception of F7, any key pressed while in command-mode
@@ -5656,7 +5663,7 @@ will not be received by the OS running in Bochs.
   </row>
   <row>
     <entry>f</entry>
-    <entry>Toggle fullscreen mode (sdl2 only)</entry>
+    <entry>Toggle windowed / fullscreen mode (sdl / sdl2 only)</entry>
   </row>
   <row>
     <entry>n</entry>
@@ -5691,9 +5698,9 @@ will not be received by the OS running in Bochs.
 </table>
 </para>
 <para>
-In fullscreen mode (sdl2) the snapshot and user button handlers do not bring up
-a dialog box. For the snapshot the hardcoded file names are used and the configured
-user button shortcut is used.
+In fullscreen mode (sdl / sdl2) the snapshot and user button handlers do not
+bring up a dialog box. The snapshot feature uses the hardcoded file name and
+the user button sends the configured shortcut.
 </para>
 </section>
 <section><title>The runtime configuration</title>
