Pressing the "m" button in gui command mode writes a marker to log file. Removed now obsolete patch.

--- a/bochs/CHANGES
+++ b/bochs/CHANGES
@@ -31,8 +31,10 @@ Changes after 2.6.11:
 - GUI and display libraries
     - Added support for calling a headerbar handler after pressing F7 (enabled
       with "cmdmode" option / present in sdl, sdl2, win32 and x).
+    - Write marker to log file by pressing "m" button (guis with "cmdmode" on).
     - X11 keymaps: added new one for Swiss-German and improved Italian map.
     - RFB: added support for the pixel format RGB332.
+    - wx: fixed status bar handling to avoid segfaults and deadlocks.
 
 - LGPL'd VGABIOS updated from SVN (fixed text output in VGA graphics modes).
 
