--- a/bochs/doc/man/bochsrc.5
+++ b/bochs/doc/man/bochsrc.5
@@ -1,5 +1,5 @@
 .\"Document Author:  Timothy R. Butler   -   tbutler@uninetsolutions.com"
-.TH bochsrc 5 "25 Aug 2020" "bochsrc" "The Bochs Project"
+.TH bochsrc 5 "23 Nov 2020" "bochsrc" "The Bochs Project"
 .\"SKIP_SECTION"
 .SH NAME
 bochsrc \- Configuration file for Bochs.
@@ -112,7 +112,7 @@ behaviour. These options are supported by more than one display library:
   "cmdmode"     - call a headerbar button handler after pressing F7 (x, sdl, sdl2)
   "fullscreen"  - startup in fullscreen mode (sdl, sdl2)
   "gui_debug"   - use GTK debugger gui (sdl, sdl2, x)
-  "hideIPS"     - disable IPS output in status bar (rfb, sdl, sdl2, vncsrv, wx, x)
+  "hideIPS"     - disable IPS output in status bar (rfb, sdl, sdl2, term, vncsrv, wx, x)
   "nokeyrepeat" - turn off host keyboard repeat (sdl, sdl2, x)
   "timeout"     - time (in seconds) to wait for client (rfb, vncsrv)
 
