--- a/bochs/CHANGES
+++ b/bochs/CHANGES
@@ -4,6 +4,7 @@ Changes after 2.6.11:
 - General
   - Save/Restore bugfixes
   - Removed legacy "load32bitOShack" feature.
+  - Removed "svga" display library designed for the obsolete Linux SVGALib.
 
 - CPU/CPUDB
   - Bugfixes for CPU emulation correctness (CPUID/VMX initialization fixes to support Windows Hyper-V as guest in Bochs)
